Update .env.local.example with detailed ASK key documentation

--- a/.env.local.example
+++ b/.env.local.example
@@ -12,3 +12,24 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Optional: Database URL for persistence
 # DATABASE_URL=your-database-url-here
+
+# ASK Key Configuration
+# ASK keys are used to identify sessions and should follow these rules:
+# - At least 3 characters long
+# - Less than 100 characters
+# - Only letters, numbers, dots (.), dashes (-), and underscores (_)
+# - Must contain at least one letter or number
+# 
+# Valid examples:
+# - test-key-123
+# - user_session_456  
+# - session.id.789
+# - ASK-2024-001
+#
+# Invalid examples:
+# - ab (too short)
+# - key with spaces (contains spaces)
+# - key@domain.com (contains @)
+# - --- (no alphanumeric characters)
+#
+# Test your ASK keys at: http://localhost:3000/test-key
