--- a/.env.local.example
+++ b/.env.local.example
@@ -7,11 +7,17 @@ EXTERNAL_ASK_WEBHOOK=https://your-external-system.com/ask-webhook
 EXTERNAL_RESPONSE_WEBHOOK=https://your-external-system.com/response-webhook
 EXTERNAL_CHALLENGE_WEBHOOK=https://your-external-system.com/challenge-webhook
 
+# Supabase Configuration (required when enabling database persistence)
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+# Never expose the service role key in client-side code or version control
+
+# Optional: Direct database connection string if you access Postgres without Supabase helpers
+# DATABASE_URL=postgresql://user:password@host:port/database
+
 # Security
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# Optional: Database URL for persistence
-# DATABASE_URL=your-database-url-here
 
 # ASK Key Configuration
 # ASK keys are used to identify sessions and should follow these rules:
