Document Vercel Supabase integration envs

--- a/.env.local.example
+++ b/.env.local.example
@@ -7,11 +7,28 @@ EXTERNAL_ASK_WEBHOOK=https://your-external-system.com/ask-webhook
 EXTERNAL_RESPONSE_WEBHOOK=https://your-external-system.com/response-webhook
 EXTERNAL_CHALLENGE_WEBHOOK=https://your-external-system.com/challenge-webhook
 
+# Supabase Configuration (populated automatically when using the Vercel ↔ Supabase integration)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
+# Never expose the service role key or JWT secret in client-side code or version control
+
+# The browser also needs to reach Supabase. Mirror the URL and anon key above for client usage.
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Postgres connection strings that Vercel syncs from Supabase (optional but handy for tooling)
+POSTGRES_URL=postgresql://user:password@host:6543/postgres
+POSTGRES_PRISMA_URL=postgresql://user:password@host:5432/postgres?pgbouncer=true&connection_limit=1
+POSTGRES_URL_NON_POOLING=postgresql://user:password@host:5432/postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=super-secret-password
+POSTGRES_HOST=db.supabase.co
+POSTGRES_DATABASE=postgres
+
 # Security
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# Optional: Database URL for persistence
-# DATABASE_URL=your-database-url-here
 
 # ASK Key Configuration
 # ASK keys are used to identify sessions and should follow these rules:
