--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/migrate.js up",
+    "migrate:status": "node scripts/migrate.js status"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -21,9 +23,11 @@
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
