--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "vercel-build": "node scripts/migrate.js && npm run build",
+    "vercel-build": "npm run build",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
