--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
+    "google-auth-library": "^9.15.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "pg": "^8.16.3",
