--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
     "google-auth-library": "^9.15.1",
+    "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "pg": "^8.16.3",
