--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -29,7 +31,7 @@
     "google-auth-library": "^9.15.1",
     "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
-    "next": "14.1.0",
+    "next": "14.2.33",
     "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
