--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "next": "14.2.33",
     "pg": "^8.16.3",
     "react": "^18",
-    "react-day-picker": "^9.11.1",
+    "react-datepicker": "^8.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
