--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@internationalized/date": "^3.10.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
@@ -35,7 +36,7 @@
     "next": "14.2.33",
     "pg": "^8.16.3",
     "react": "^18",
-    "react-datepicker": "^8.8.0",
+    "react-aria-components": "^1.13.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
