--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "google-auth-library": "^9.15.1",
     "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
-    "next": "14.2.33",
+    "next": "^16.0.0",
     "pg": "^8.16.3",
-    "react": "^18",
+    "react": "^19",
     "react-aria-components": "^1.13.0",
-    "react-dom": "^18",
+    "react-dom": "^19",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^16.1.0",
@@ -48,11 +48,11 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^16.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
