--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -32,6 +33,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
     "google-auth-library": "^9.15.1",
+    "highlight.js": "^11.11.1",
     "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
     "next": "^16.0.0",
@@ -40,8 +42,10 @@
     "react-aria-components": "^1.13.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
