--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "@deepgram/sdk": "^4.11.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
