feat: Intégration complète de Speechmatics Real-Time STT avec JWT et optimisations
✨ Nouvelles fonctionnalités:
- Intégration complète de Speechmatics Real-Time STT comme alternative à Deepgram
- Support de l'authentification JWT via @speechmatics/auth pour connexions directes (compatible Vercel)
- Proxy WebSocket local pour développement (scripts/speechmatics-ws-proxy.js)
- API route /api/speechmatics-jwt pour génération de JWT temporaires
- API route /api/speechmatics-llm pour appels LLM côté serveur (évite CORS)

🗄️ Base de données:
- Migration 049: Ajout colonnes Speechmatics (stt_language, operating_point, max_delay, etc.)
- Migration 050: Ajout sélecteur voice_agent_provider (deepgram-voice-agent | speechmatics-voice-agent)
- Support complet des configurations Speechmatics dans ai_model_configs

🎯 Améliorations transcription:
- Accumulation intelligente des transcriptions finales (pendingFinalTranscript)
- Détection de phrases complètes (ponctuation ou >20 caractères)
- Groupement des mots au lieu de traitement mot-à-mot
- max_delay augmenté à 3.0s et operating_point 'enhanced' pour meilleure précision

🔧 Corrections techniques:
- Format message StartRecognition corrigé (message: 'StartRecognition' + audio_format requis)
- Handler messages Speechmatics corrigé (AddPartialTranscript/AddTranscript depuis metadata.transcript)
- Gestion CORS: appels LLM via API route au lieu d'appels directs depuis navigateur
- Fermeture propre des sessions WebSocket avec EndOfStream pour éviter quota_exceeded
- Nettoyage complet des transcripts en attente lors de la déconnexion

🎨 Interface admin:
- Restructuration de la page /admin/ai avec sections collapsibles
- Sections: Agent Principal, Agent STT Associé, Agent TTS Associé
- Sélecteurs dropdown pour STT (Deepgram/Speechmatics) et TTS (ElevenLabs)
- Affichage complet de tous les champs Deepgram et Speechmatics
- Sélecteur voice_agent_provider visible pour tous les modèles

📦 Dépendances:
- Ajout @speechmatics/auth pour générat

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
+    "dev:with-proxy": "concurrently \"npm run dev\" \"node scripts/speechmatics-ws-proxy.js\"",
+    "speechmatics-proxy": "node scripts/speechmatics-ws-proxy.js",
     "vercel-build": "npm run build",
     "build": "next build",
     "start": "next start",
@@ -13,6 +15,7 @@
     "migrate:status": "node scripts/migrate.js status"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.11.2",
     "@hookform/resolvers": "^3.3.4",
     "@internationalized/date": "^3.10.0",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -23,13 +26,13 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@speechmatics/auth": "^0.1.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "@deepgram/sdk": "^4.11.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
