refactor: refactorisation majeure du système Speechmatics et améliorations de l'interface vocale
✨ Nouvelles fonctionnalités:
- Système de déduplication audio robuste pour Speechmatics avec cache temporel
- Support des templates de prompts pour les asks (CRUD complet)
- Interface de sélection de templates dans le formulaire d'édition d'asks
- Améliorations de l'interface vocale premium avec meilleure gestion d'état

🏗️ Refactorisation Speechmatics:
- Modularisation complète du système Speechmatics en modules séparés:
  * speechmatics-auth.ts: Gestion de l'authentification JWT
  * speechmatics-audio.ts: Traitement et préparation de l'audio
  * speechmatics-audio-dedupe.ts: Système de déduplication des chunks audio
  * speechmatics-transcription.ts: Gestion des transcriptions
  * speechmatics-llm.ts: Intégration LLM pour les réponses vocales
  * speechmatics-websocket.ts: Gestion de la connexion WebSocket
  * speechmatics-types.ts: Types TypeScript centralisés
- Réduction de ~1000 lignes dans speechmatics.ts (de 1057 à ~400 lignes)
- Meilleure séparation des responsabilités et maintenabilité

🔧 Améliorations techniques:
- Système de déduplication avec hash polynomial robuste (7 points d'échantillonnage)
- Cache avec fenêtre temporelle de 3 secondes pour détecter les doublons
- Nettoyage automatique du cache pour éviter les fuites mémoire
- Réinitialisation du cache sur reconnexion WebSocket
- Amélioration de la gestion d'état dans PremiumVoiceInterface
- Meilleure intégration avec le système de chat

🗄️ Migrations base de données:
- Migration 051: Création de la table ask_prompt_templates
- Migration 052: Insertion des templates par défaut
- Migration 053: Configuration RLS pour ask_prompt_templates
- Migration 054: Attribution des grants nécessaires

📝 Documentation:
- Ajout de SPEECHMATICS_DEDUPE_SYSTEM.md avec documentation complète
- Ajout de SPEECHMATICS_MODULAR_STRUCTURE.md expliquant l'architecture

🐛 Corrections:
- Correction de la gestion des erreurs dans le 

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "start": "next start",
     "lint": "next lint",
     "migrate": "node scripts/migrate.js up",
-    "migrate:status": "node scripts/migrate.js status"
+    "migrate:status": "node scripts/migrate.js status",
+    "clean": "rm -rf .next node_modules/.cache tsconfig.tsbuildinfo",
+    "clean:all": "npm run clean && rm -rf node_modules && npm install",
+    "dev:clean": "npm run clean && npm run dev"
   },
   "dependencies": {
     "@deepgram/sdk": "^4.11.2",
