--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
     "google-auth-library": "^9.15.1",
+    "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
     "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
