--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^18",
     "react-aria-components": "^1.13.0",
     "react-dom": "^18",
+    "react-force-graph": "^1.48.1",
     "react-hook-form": "^7.49.3",
     "react-markdown": "^9.1.0",
     "react-syntax-highlighter": "^16.1.0",
@@ -56,6 +57,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
