--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.181.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^9",
     "eslint-config-next": "^16.0.0",
