--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@speechmatics/auth": "^0.1.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.57.4",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.0",
@@ -46,6 +48,7 @@
     "google-auth-library": "^9.15.1",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
+    "jose": "^6.1.3",
     "jsonrepair": "^3.13.1",
     "lucide-react": "^0.344.0",
     "next": "^16.0.7",
