--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^11.0.6",
     "google-auth-library": "^9.15.1",
+    "graphology": "^0.26.0",
+    "graphology-communities-louvain": "^2.0.2",
+    "graphology-metrics": "^2.4.0",
+    "graphology-shortest-path": "^2.1.0",
+    "graphology-traversal": "^0.3.1",
     "handlebars": "^4.7.8",
     "highlight.js": "^11.11.1",
     "jose": "^6.1.3",
